--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Math-Libgsl-Interpolation
 
 {{$NEXT}}
+    - Methods that return self throw on error, instead of failing
 
 0.0.3  2021-12-09T11:27:42+01:00
     - Change :auth field
